tests/core/errors/test_command_report_data/TARGETS.fixture
trivial_build(name = "build_success")

fail_build(name = "fail1")
fail_build(name = "fail2")
